chore: use unified shelf renovate config [ci skip]

--- a/renovate.json
+++ b/renovate.json
@@ -1,15 +1,3 @@
 {
-  "extends": ["config:base"],
-  "packageRules": [
-    {
-      "groupName": "Frequently updated dev deps",
-      "commitMessageSuffix": " [ci skip]",
-      "automerge": true,
-      "major": {
-        "automerge": false
-      },
-      "packagePatterns": ["^@babel/", "^babel-", "^eslint", "^jest"],
-      "packageNames": ["lint-staged", "prettier", "husky"]
-    }
-  ]
+  "extends": ["github>shelfio/renovate-config"]
 }
