--- a/package.json
+++ b/package.json
@@ -32,9 +32,8 @@
     "is-image": "2.0.0"
   },
   "devDependencies": {
+    "@shelf/eslint-config": "0.0.8",
     "eslint": "5.12.1",
-    "eslint-config-prettier": "3.6.0",
-    "eslint-plugin-prettier": "3.0.1",
     "husky": "1.3.1",
     "jest": "23.6.0",
     "lint-staged": "8.1.0",
@@ -46,7 +45,11 @@
     }
   },
   "lint-staged": {
-    "*.{js,json,css,md}": [
+    "*.js": [
+      "eslint --fix",
+      "git add"
+    ],
+    "*.{html,json,md,yml}": [
       "prettier --write",
       "git add"
     ]
