--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@shelf/aws-lambda-tesseract",
   "version": "2.0.1",
-  "description": "6 MB Tesseract (with English training data) to fit inside AWS Lambda",
+  "description": "6 MB Tesseract 4.1 (with English training data) to fit inside AWS Lambda",
   "license": "MIT",
   "repository": "shelfio/aws-lambda-tesseract",
   "author": {
