--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,24 +1,33 @@
-version: 2
+orbs:
+  node: circleci/node@5.0.2
+  aws-cli: circleci/aws-cli@3.1.1
+
+version: 2.1
+
+parameters:
+  node_version:
+    type: string
+    default: '16.15.0'
+
+commands:
+  install_deps:
+    steps:
+      - node/install-packages:
+          pkg-manager: yarn
+          cache-version: v1-all
+          cache-only-lockfile: true
+          app-dir: ~/repo
+          override-ci-command: yarn install --pure-lockfile --no-progress
 
 jobs:
   build:
-    docker:
-      - image: circleci/node:12
-
+    executor:
+      name: node/default
+      tag: << pipeline.parameters.node_version >>
     working_directory: ~/repo
-
     steps:
       - checkout
-      - restore_cache:
-          keys:
-            - v1-dependencies-{{ checksum "package.json" }}
-            - v1-dependencies-
-
-      - run: yarn
+      - install_deps
       - run: yarn test
-
-      - save_cache:
-          paths:
-            - node_modules
-            - yarn.lock
-          key: v1-dependencies-{{ checksum "package.json" }}
+      - run: yarn type-check
+      - run: yarn lint:ci
