--- a/renovate.json
+++ b/renovate.json
@@ -1,4 +1,5 @@
 {
   "extends": ["config:base"],
-  "labels": ["dependencies", "backend"]
+  "labels": ["dependencies", "backend"],
+  "ignoreDeps": ["@types/node"]
 }
