chore: use public renovate config [ci skip]

--- a/renovate.json
+++ b/renovate.json
@@ -1,5 +1,4 @@
 {
-  "extends": ["config:base"],
-  "labels": ["dependencies", "backend"],
-  "ignoreDeps": ["@types/node"]
+  "extends": ["github>shelfio/renovate-config-public"],
+  "labels": ["backend"]
 }
