--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "@types/node": "16",
     "@types/tar": "6.1.5",
     "eslint": "8.44.0",
+    "eslint-plugin-prettier": "5.0.0",
     "husky": "8.0.3",
     "jest": "29.5.0",
     "lint-staged": "13.2.3",
