--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "build:types": "tsc --emitDeclarationOnly --declaration --isolatedModules false --declarationDir lib",
     "coverage": "jest --coverage",
     "lint": "yarn lint:ci --fix",
-    "lint:ci": "eslint . --ext .js,.ts,.json",
+    "lint:ci": "eslint . --quiet",
     "prepack": "yarn build",
     "test": "TZ=UTC jest src",
     "type-check": "tsc --noEmit",
@@ -46,7 +46,7 @@
     "tar": "7.4.3"
   },
   "devDependencies": {
-    "@shelf/eslint-config": "3.15.1",
+    "@shelf/eslint-config": "4.2.1",
     "@shelf/prettier-config": "1.0.0",
     "@swc/core": "1.7.11",
     "@swc/jest": "0.2.36",
@@ -54,7 +54,7 @@
     "@types/node": "18",
     "@types/tar": "6.1.13",
     "esbuild": "0.23.1",
-    "eslint": "8.57.1",
+    "eslint": "9.17.0",
     "husky": "9.1.4",
     "jest": "29.7.0",
     "lint-staged": "15.2.11",
